# acr

./: .gitignore  README.md  mypy_validate.py  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/acr/: cli.py  configuration.py  default_config.yaml
src/acr/commands/: __init__.py  install.py  install_helpers.py  review.py
src/acr/core/: __init__.py  analyzer.py  git_utils.py  models.py
src/acr/utils/: __init__.py  config_manager.py  helpers.py  output.py
tests/: test_analyzer.py
